fix abcols on mobile

--- a/css/Styling.css
+++ b/css/Styling.css
@@ -268,6 +268,7 @@ p {
     .abcols, .sercols {
         width: 100%;
         margin: 10px 0;
+        clear:both;
     }
 
     .services {
